tests/e2e/validation-webhook/http/match-conditions/compilation-failure/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: compilation-failure
spec:
  steps: 
  - try:
    - create:
        file: ./policy.yaml
        expect:
        - check:
            ($error): |-
              admission webhook "http.kyverno-authz-server-validation.kyverno.svc" denied the request: ValidatingPolicy.policies.kyverno.io "compilation-failure" is invalid: spec.matchConditions[0].expression: Invalid value: "'flop' + 2\n": ERROR: <input>:1:8: found no matching overload for '_+_' applied to '(string, int)'
               | 'flop' + 2
               | .......^
